[package]
name = "base-address"
description = "Static and dynamic base address for peripheral buses"
version = "0.0.0"
authors = [
    "Luo Jia <me@luojia.cc>",
]
repository = "https://github.com/rustsbi/base-address"
documentation = "https://docs.rs/base-address"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["embedded", "firmware"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
